# CWundergroundAPI

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json
include/: wunderground.h  wunderground_auto.h  wunderground_units.h
src/: library.c  wunderground.c  wunderground_auto.c  wunderground_units.c  wunderground_units_internal.h
test/: test.h  wunderground_init_test.c
tests/: test.c
